fixed top overlap

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
     margin: 0px;
 }
 
+.lightpurple{
+    color: #794faf;
+}
 .purple{
     color: #241734;
 }
@@ -187,7 +190,7 @@ body {
 .widget {
     background-color: #794faf;
     width: 80%;
-    height: 400px;
+    height: 350px;
     margin: 25px;
     margin-top:0px;
     position: relative;
@@ -401,6 +404,24 @@ body {
     position: relative;
 } */
 
+/* --------------------------LOGOS--------------------------------- */
+
+.logosubtitle{
+    justify-content: baseline;
+}
+
+/* ------------- SERVICES PAGE ----------------------------------- */
+#services{
+    display: block;
+    position: relative;
+    justify-content:left;
+
+}
+.servicesubtitle{
+    justify-content:left;
+    align-items:baseline;
+  
+}
 /* -------------------------------------------------------------- */
 .contact {
     display: flex;
@@ -523,7 +544,7 @@ body {
     .widget{
         position: relative;
         /* height:100%; */
-        min-height: 300px;
+        min-height: 4500px;
         max-height:500px;
         margin-bottom:0;
         overflow-y: auto;
